# svg-slicer

./: .gitignore  pyproject.toml  test.py  test2.py
src/svg2gcode/: __main__.py  gcode_generator.py  gcode_viewer.py  slicing_options.py
src/svg_slicer/: __main__.py  gcode_generator.py  gcode_viewer.py  helpers.py  slicing_options.py
src/svg_slicer/widgets/: labeled_spin_box.py
tests/: conftest.py  test_gcode_generator.py  test_helpers.py  test_slicing_options.py
