[project]
name = "svg2gcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lane324", email = "lanetaylor2013@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "pyside6>=6.9.2",
    "rich>=14.1.0",
    "scipy>=1.16.1",
    "svgpathtools>=1.7.1",
]

[project.scripts]
svg2gcode = "svg2gcode.gcode_generator:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pylint>=3.3.8",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
addopts = "--cov=svg2gcode --cov-branch --cov-report xml tests --cov-report term-missing"
testpaths = ["tests"]