[project]
name = "svg-slicer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Lane324", email = "lanetaylor2013@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pyside6>=6.9.2",
    "scipy>=1.16.1",
    "svgpathtools>=1.7.1",
    "tomli-w>=1.2.0",
]

[project.scripts]
svg-slicer = "svg_slicer.__main__:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pylint>=3.3.8",
    "pytest>=8.4.1",
    "pytest-qt>=4.5.0",
]

[tool.pytest.ini_options]
addopts = "--cov=svg_slicer --cov-branch --cov-report xml tests --cov-report term-missing"
testpaths = ["tests"]
qt_api = "pyside6"
